--- a/src/App.scss
+++ b/src/App.scss
@@ -22,16 +22,30 @@ button {
 
 .calculator {
   background-color: lighten(color(main), 30%);
-  height: 85%;
   aspect-ratio: 1.4 / 2;
-  min-width: 0;
-  min-height: 0;
+  height: 85%;
   max-width: 85%;
   max-height: 100rem;
+  min-width: 0;
+  min-height: 0;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 35% 1fr;
   @include box-shadow(0.5, 0.5, 1, 0.3);
+
+  @media (max-height: 34.375em) and (orientation: portrait) {
+    height: 100%;
+    width: 100%;
+    max-width: unset;
+    aspect-ratio: unset;
+  }
+
+  @media (max-width: 21.875em) and (orientation: portrait) {
+    height: 100%;
+    width: 100%;
+    max-width: unset;
+    aspect-ratio: unset;
+  }
 }
 
 .screen {
@@ -39,18 +53,24 @@ button {
   height: 100%;
   background-color: darken(white, 5%);
   @include flex(end, center);
-  padding: 2rem;
-  font-size: 3rem;
+  padding: 1rem;
+  position: relative;
 
   &__container {
-    overflow-y: scroll;
     width: 100%;
-    height: 100%;
+    height: 70%;
+    @include flex(end, center);
+    overflow-y: scroll;
+    padding: 1rem;
+  }
 
-    span {
-      text-align: end;
-      display: block;
-    }
+  span {
+    width: 100%;
+    font-size: clamp(2rem, 8vw, 3rem);
+    color: lighten(color(main), 20%);
+    text-align: end;
+    display: block;
+    word-break: break-all;
   }
 }
 
@@ -81,7 +101,7 @@ button {
   width: 100%;
   height: 100%;
   color: white;
-  font-size: 1rem;
+  font-size: 1.2rem;
   position: relative;
   overflow: hidden;
 
